[ios] Use tab title util in tab grid

This CL uses the tab title util in tab grid, which handles more edge
cases around the WebState's title.

Bug: 894081
Change-Id: I66d90a877f1bfb716e0c1327ea0bf8abf1dd49b8
Reviewed-on: https://chromium-review.googlesource.com/c/1391709
Reviewed-by: Mark Cogan <marq@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Commit-Queue: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619156}